# rpi_surveillance

./: .gitignore  LICENSE  README.md  pyproject.toml
rpi_surveillance/: app.py
rpi_surveillance/backend/: detction_worker.py  server.py
rpi_surveillance/configuration/: config.py
rpi_surveillance/detector/: converter.py  dataset.py  train.py
rpi_surveillance/ui/: README.md  __init__.py  live_view.py  login.py  record.py  record_viewer.py  web.py  webui.py
